--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -381,7 +381,8 @@
                                        onchange="updatePercentageDescription
                                        ('percentage-description-1', this.value)"/>
                             </td>
-                            <td><label for="percentage-1"></label>
+                            <td><label for="percentage-1"></label></td>
+                            <td>
                                 <input type="text" id="percentage-1" value="" size="4" readonly>
                             </td>
                         </tr>
@@ -395,7 +396,8 @@
                                        onchange="updatePercentageDescription
                                        ('percentage-description-2', this.value)"/>
                             </td>
-                            <td><label for="percentage-2"></label>
+                            <td><label for="percentage-2"></label></td>
+                            <td>
                                 <input type="text" id="percentage-2" value="" size="4" readonly>
                             </td>
                         </tr>
@@ -409,7 +411,8 @@
                                        onchange="updatePercentageDescription
                                        ('percentage-description-3', this.value)"/>
                             </td>
-                            <td><label for="percentage-3"></label>
+                            <td><label for="percentage-3"></label></td>
+                            <td>
                                 <input type="text" id="percentage-3" value="" size="4" readonly>
                             </td>
                         </tr>
@@ -423,7 +426,8 @@
                                        onchange="updatePercentageDescription
                                        ('percentage-description-4', this.value)"/>
                             </td>
-                            <td><label for="percentage-4"></label>
+                            <td><label for="percentage-4"></label></td>
+                            <td>
                                 <input type="text" id="percentage-4" value="" size="4" readonly>
                             </td>
                         </tr>
@@ -438,7 +442,8 @@
                                        onchange="updatePercentageDescription
                                        ('percentage-description-5', this.value)"/>
                             </td>
-                            <td><label for="percentage-5"></label>
+                            <td><label for="percentage-5"></label></td>
+                            <td>
                                 <input type="text" id="percentage-5" value="" size="4" readonly>
                             </td>
                         </tr>
@@ -452,7 +457,8 @@
                                        onchange="updatePercentageDescription
                                        ('percentage-description-6', this.value)"/>
                             </td>
-                            <td><label for="percentage-6"></label>
+                            <td><label for="percentage-6"></label></td>
+                            <td>
                                 <input type="text" id="percentage-6" value="" size="4" readonly>
                             </td>
                         </tr>
@@ -466,7 +472,8 @@
                                        onchange="updatePercentageDescription
                                        ('percentage-description-7', this.value)"/>
                             </td>
-                            <td><label for="percentage-7"></label>
+                            <td><label for="percentage-7"></label></td>
+                            <td>
                                 <input type="text" id="percentage-7" value="" size="4" readonly>
                             </td>
                         </tr>
@@ -480,7 +487,8 @@
                                        onchange="updatePercentageDescription
                                        ('percentage-description-8', this.value)"/>
                             </td>
-                            <td><label for="percentage-8"></label>
+                            <td><label for="percentage-8"></label></td>
+                            <td>
                                 <input type="text" id="percentage-8" value="" size="4" readonly>
                             </td>
                         </tr>
@@ -494,7 +502,8 @@
                                        onchange="updatePercentageDescription
                                        ('percentage-description-9', this.value)"/>
                             </td>
-                            <td><label for="percentage-9"></label>
+                            <td><label for="percentage-9"></label></td>
+                            <td>
                                 <input type="text" id="percentage-9" value="" size="4" readonly>
                             </td>
                         </tr>
@@ -508,7 +517,8 @@
                                        onchange="updatePercentageDescription
                                        ('percentage-description-10', this.value)"/>
                             </td>
-                            <td><label for="percentage-10"></label>
+                            <td><label for="percentage-10"></label></td>
+                            <td>
                                 <input type="text" id="percentage-10" value="" size="4" readonly>
                             </td>
                         </tr>
@@ -522,7 +532,8 @@
                                        onchange="updatePercentageDescription
                                        ('percentage-description-11', this.value)"/>
                             </td>
-                            <td><label for="percentage-11"></label>
+                            <td><label for="percentage-11"></label></td>
+                            <td>
                                 <input type="text" id="percentage-11" value="" size="4" readonly>
                             </td>
                         </tr>
@@ -536,7 +547,8 @@
                                        onchange="updatePercentageDescription
                                        ('percentage-description-12', this.value)"/>
                             </td>
-                            <td><label for="percentage-12"></label>
+                            <td><label for="percentage-12"></label></td>
+                            <td>
                                 <input type="text" id="percentage-12" value="" size="4" readonly>
                             </td>
                         </tr>
@@ -550,7 +562,8 @@
                                        onchange="updatePercentageDescription
                                        ('percentage-description-13', this.value)"/>
                             </td>
-                            <td><label for="percentage-13"></label>
+                            <td><label for="percentage-13"></label></td>
+                            <td>
                                 <input type="text" id="percentage-13" value="" size="4" readonly>
                             </td>
                         </tr>
