Overall strength tab visual tweaks

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en-US" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -96,7 +96,7 @@
                             </tr>
                             <tr>
                                 <td><label for="squat-max">Max</label></td>
-                                <td><input type="text" id="squat-max" value="" readonly></td>
+                                <td><input type="text" id="squat-max" value="" readonly size="5"></td>
                             </tr>
                         </table>
                     </div>
@@ -140,7 +140,7 @@
                             </tr>
                             <tr>
                                 <td><label for="bench-max">Max</label></td>
-                                <td><input type="text" id="bench-max" value="" readonly></td>
+                                <td><input type="text" id="bench-max" value="" readonly size="5"></td>
                             </tr>
                         </table>
                     </div>
@@ -186,7 +186,7 @@
                             </tr>
                             <tr>
                                 <td><label for="deadlift-max">Max</label></td>
-                                <td><input type="text" id="deadlift-max" value="" readonly></td>
+                                <td><input type="text" id="deadlift-max" value="" readonly size="5"></td>
                             </tr>
                         </table>
                     </div>
@@ -232,7 +232,7 @@
                             </tr>
                             <tr>
                                 <td><label for="military-max">Max</label></td>
-                                <td><input type="text" id="military-max" value="" readonly></td>
+                                <td><input type="text" id="military-max" value="" readonly size="5"></td>
                             </tr>
                         </table>
                     </div>
@@ -276,7 +276,7 @@
                             </tr>
                             <tr>
                                 <td><label for="row-max">Max</label></td>
-                                <td><input type="text" id="row-max" value="" readonly></td>
+                                <td><input type="text" id="row-max" value="" readonly size="5"></td>
                             </tr>
                         </table>
                     </div>
@@ -321,7 +321,7 @@
                             </tr>
                             <tr>
                                 <td><label for="pullup-max">Max</label></td>
-                                <td><input type="text" id="pullup-max" value="" readonly></td>
+                                <td><input type="text" id="pullup-max" value="" readonly size="5"></td>
                             </tr>
                         </table>
                     </div>
