--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -56,7 +56,8 @@
     <!--/*@thymesVar id="topMessage" type="java"*/-->
     <h2 th:text="${topMessage}"></h2><br/>
     <!--/*@thymesVar id="user" type="java"*/-->
-    <form th:action="@{/saveuser}" th:object="${user}" method="post">
+    <!--/*@thymesVar id="passwordValidation" type="java"*/-->
+    <form th:action="@{/saveuser}" th:object="${user}, ${passwordValidation}" method="post">
         <input type="hidden" th:field="*{id}"/>
         <p>Username: <input type="text" th:field="*{name}" autofocus="autofocus"/>
             <span th:if="${#fields.hasErrors('name')}" class="alert" th:errors="*{name}"></span></p>
