--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -62,7 +62,9 @@
         <p>Username: <input type="text" th:field="*{name}" autofocus="autofocus"/>
             <span th:if="${#fields.hasErrors('name')}" class="alert" th:errors="*{name}"></span></p>
         <p>Password: <input type="password" th:field="*{password}"/>
-            <span th:if="${#fields.hasErrors('password')}" class="alert" th:errors="*{password}"></span></p>
+            <span th:if="${#fields.hasErrors('password')}" class="alert" th:errors="*{password}"></span>
+            <!--/*@thymesVar id="passwordsDontMatch" type="java"*/-->
+            <span class='alert' th:text="${passwordsDontMatch}"></span></p>
         <p>Confirm password: <input type="password" th:field="*{confirmPassword}"/>
             <span th:if="${#fields.hasErrors('confirmPassword')}" class="alert" th:errors="*{confirmPassword}"></span></p>
         <p>Email: <input type="text" th:field="*{email}"/>
