Html code clean-up

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -42,7 +42,7 @@
     <!--Tab content-->
     <!--Either main calculator tab or login tab content are visible
     depending on boolean variable sent from controller-->
-    <div class="center-container">
+    <div class="content-container">
         <div id="filler-1" style="display: none;">
             <br>
         </div>
