--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -3,7 +3,7 @@ html {
     overflow-y: scroll;
 }
 html, body, .main-container {
-    height: 100%;
+    height: 101%;
     margin: 0;
 }
 html body {
@@ -310,8 +310,8 @@ button:active, input[type=submit]:active, .my-button:active {
 .top-container {
 }
 
-.center-container {
-    flex: 2 ;
+.content-container {
+    flex: 2;
 }
 
 .workout-content {
@@ -323,14 +323,6 @@ button:active, input[type=submit]:active, .my-button:active {
     width: 25%;
     float: right;
 }
-
-/*.top-filler {*/
-/*    max-height: 25%;*/
-/*}*/
-
-/*.bottom-filler {*/
-/*    min-height: 50%;*/
-/*}*/
 
 /* General text styling */
 .bigger-label {
