--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -21,7 +21,8 @@
     </form>
     <br/>
     <button class="my-button" onclick="location.href = '/wl/register'" type="button">
-        Register</button>
+        Register
+    </button>
 </div>
 
 <!--Display on successful logout-->
@@ -55,16 +56,18 @@
         <p>Username: <input type="text" th:field="*{name}" autofocus="autofocus"/>
             <span th:if="${#fields.hasErrors('name')}" class="alert" th:errors="*{name}"></span></p>
         <p>Password: <input type="password" th:field="*{password}"/>
-            <span th:if="${#fields.hasErrors('password')}" class="alert" th:errors="*{password}"></span>
+            <span th:if="${#fields.hasErrors('password')}" class="alert"
+                  th:errors="*{password}"></span>
             <!--/*@thymesVar id="passwordsDontMatch" type="java"*/-->
             <span class='alert' th:text="${passwordsDontMatch}"></span></p>
         <p>Confirm password: <input type="password" th:field="*{confirmPassword}"/>
-            <span th:if="${#fields.hasErrors('confirmPassword')}" class="alert" th:errors="*{confirmPassword}"></span></p>
+            <span th:if="${#fields.hasErrors('confirmPassword')}" class="alert"
+                  th:errors="*{confirmPassword}"></span></p>
         <p>Email: <input type="text" th:field="*{email}"/>
             <span th:if="${#fields.hasErrors('email')}" class="alert" th:errors="*{email}"></span>
             <!--/*@thymesVar id="emailExists" type="java"*/-->
             <span class='alert' th:text="${emailExists}"></span></p>
-        <p><input type="checkbox" th:field="*{realEmail}" th:value ="false"/>
+        <p><input type="checkbox" th:field="*{realEmail}" th:value="false"/>
             <span>This is a real email, please send me an activation message</span></p>
         <p>First name: <input type="text" th:field="*{firstName}"/></p>
         <p>Surname: <input type="text" th:field="*{lastName}"/></p>
@@ -86,15 +89,17 @@
         <p>Username: <input type="text" th:field="*{name}" autofocus="autofocus"/>
             <span th:if="${#fields.hasErrors('name')}" class="alert" th:errors="*{name}"></span></p>
         <p>Password: <input type="password" th:field="*{password}"/>
-            <span th:if="${#fields.hasErrors('password')}" class="alert" th:errors="*{password}"></span>
+            <span th:if="${#fields.hasErrors('password')}" class="alert"
+                  th:errors="*{password}"></span>
             <button class="my-button" onclick="location.href='/wl/changepassword'"
                     type="button">
-                Change password</button>
+                Change password
+            </button>
         <p>Email: <input type="text" th:field="*{email}"/>
             <span th:if="${#fields.hasErrors('email')}" class="alert" th:errors="*{email}"></span>
             <!--/*@thymesVar id="emailExists" type="java"*/-->
             <span class='alert' th:text="${emailExists}"></span></p>
-        <p><input type="checkbox" th:field="*{realEmail}" th:value ="false"/>
+        <p><input type="checkbox" th:field="*{realEmail}" th:value="false"/>
             <span>This is a real email, please send me a confirmation message</span></p>
         <p>First name: <input type="text" th:field="*{firstName}"/></p>
         <p>Surname: <input type="text" th:field="*{lastName}"/></p>
@@ -112,7 +117,8 @@
     <h2>Please enter and confirm both current and new passwords...</h2><br/>
     <!--/*@thymesVar id="changePassword" type="java"*/-->
     <form th:action="@{/changepassword}" th:object="${changePassword}" method="post">
-        <p>Current password: <input type="password" th:field="*{oldPassword}" autofocus="autofocus"/>
+        <p>Current password: <input type="password" th:field="*{oldPassword}"
+                                    autofocus="autofocus"/>
             <span th:if="${#fields.hasErrors('oldPassword')}" class="alert"
                   th:errors="*{oldPassword}"></span></p>
         <p>Confirm current password: <input type="password" th:field="*{confirmOldPassword}"/>
@@ -131,42 +137,47 @@
 
 <!--User details registration successful-->
 <div th:fragment="register-user-success">
-    <br/><h2>Registration successfull!</h2><br/>
+    <br/>
+    <h2>Registration successfull!</h2><br/>
     <button class="my-button" onclick="location.href='/wl/login'" type="button">OK</button>
 </div>
 
 <!--User details update successful-->
 <div th:fragment="update-user-success">
-    <br/><h2>User details updated!</h2><br/>
+    <br/>
+    <h2>User details updated!</h2><br/>
     <button class="my-button" onclick="location.href='/wl/user'" type="button">OK</button>
 </div>
 
 <!--Password change successful-->
 <div th:fragment="change-password-success">
-    <br/><h2>New password has been set!</h2><br/>
+    <br/>
+    <h2>New password has been set!</h2><br/>
     <button class="my-button" onclick="location.href='/wl/update'" type="button">OK</button>
 </div>
 
 <!--User panel-->
-<div th:fragment="user-panel">
-    <div class="workout-content-container">
-        <div class="workout-content">
-                <h2>Select existing workout from the panel to the right or...</h2>
-                <button class="my-button" onclick="location.href='/wl/newworkout'" type="button">
-                    Add new workout</button>
-        </div>
+<div th:fragment="user-panel" class="workout-container">
+    <div class="workout-content">
+        <h2>Select existing workout from the panel to the right or...</h2>
+        <button class="my-button" onclick="location.href='/wl/newworkout'" type="button">
+            Add new workout
+        </button>
     </div>
     <div class="workout-selection">
         <div class="controls">
             <!--/*@thymesVar id="userGreeting" type="java"*/-->
             <p class="same-row" th:text="${userGreeting}"></p>
             <button class="same-row my-button" onclick="location.href='/wl/logout'"
-                    type="button">Log out</button>
+                    type="button">Log out
+            </button>
             <button class="same-row my-button" onclick="location.href='/wl/update'"
-                    type="button">My profile</button>
+                    type="button">My profile
+            </button>
             <!--/*@thymesVar id="adminRights" type="java"*/-->
             <button th:if="${adminRights}" class="same-row my-button"
-                    onclick="location.href='/wl/admin'">Admin panel</button>
+                    onclick="location.href='/wl/admin'">Admin panel
+            </button>
         </div>
     </div>
 </div>
@@ -177,9 +188,11 @@
         <!--/*@thymesVar id="adminGreeting" type="java"*/-->
         <p class="same-row" th:text="${adminGreeting}"></p>
         <button class="same-row my-button" onclick="location.href='/wl/logout'"
-                type="button">Log out</button>
+                type="button">Log out
+        </button>
         <button class="same-row my-button" onclick="location.href='/wl/user'"
-                type="button">Back</button>
+                type="button">Back
+        </button>
     </div>
     <h2>Welcome, Admin!</h2>
 </div>
